hphp/hack/test/typecheck/needs_concrete/needs_concrete_on_nonstatic_method_1.php
<?hh

abstract class A {
  <<__NeedsConcrete>>
  public function m1(): void {
  }
}
